--- a/extras/yt-dlp/yt-dlp.conf
+++ b/extras/yt-dlp/yt-dlp.conf
@@ -16,6 +16,7 @@
 #File containing URLs to download ("-" for stdin), one URL per line. 
 #Lines starting with "#", ";" or "]" are considered as comments and ignored
 -a, --batch-file FILE           
+#Example: <~/py_projects/yt-dlp/yt_urls.txt>
 
 #Do not read URLs from batch file (default)
 --no-batch-file                 
